force-app/main/default/objects/RakurakuMeisai__c/RakurakuMeisai__c.object-meta.xml
<CustomObject>
    <label>楽楽</label>
    <nameField>
        <displayFormat>RM-{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>楽楽番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>