force-app/main/default/objects/RakurakuMeisai__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Rakurakumeisais</relationshipName>
    <type>Lookup</type>
</CustomField>