force-app/main/default/objects/RakurakuMeisai__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Rakurakumeisais</relationshipName>
    <type>Lookup</type>
</CustomField>