force-app/main/default/objects/RakurakuMeisai__c/fields/Rakurakumeisai_Id__c.field-meta.xml
<CustomField>
    <fullName>Rakurakumeisai_Id__c</fullName>
    <displayFormat>R{YY}{MM}{000000000}</displayFormat>
    <label>楽楽明細ID</label>
    <type>AutoNumber</type>
</CustomField>